2003-10-01  Takashi Iwai <tiwai@suse.de>

	* timidity/aRts_a.c, timidity/output.c: Removed arts2 output mode,
	  which is identical with arts mode, indeed.
	  Fixed wrong cast of pointer to integer.
	  Fixed the detect function of aRts.

2003-09-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configure.in:
	  Change order of Tcl/Tk library version

2003-09-29  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Hack up around channel layer

2003-09-26  Kentaro Sato <kentaro@ranvis.com>

	* timidity/readmidi.c: Replaced the previous patch mis-applied.

2003-09-24  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c, timidity/readmidi.c:
	  Fixed crash with --realtime-load (opt_realtime_playing).

2003-09-21  Saito <timidity@flashmail.com>

	* timidity/w32_a.c:
	  Add detect() functions.
	* interface/rtsyn_winmm.c:
	  Fix around sleep().

2003-09-21  Kentaro Sato <kentaro@ranvis.com>

	* timidity/readmidi.c (add_channel_layer, remove_channel_layer):
	  Bug Fix

2003-09-18  Takashi Iwai <tiwai@suse.de>

	* timidity/output.h, timidity/timidity.c, timidity/*_a.c:
	  Added the detect callback to output record.  It's used to
	  check the availability of default device and fallback devices.

2003-09-18  mput <root@mput.dip.jp>

	* timidity/playmidi.c (note_off): Bug fix SEGV-ing for
	  non-existent instrument

2003-09-16  Saito <timidity@flashmail.com>

	* utils/getopt.h:
	  Fix around including unistd.h.
	* configs/msc-project.zip:
	  Fix utils.dsp for getopt.c.

2003-09-14  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/m2m.c (m2m_process_events): Bug Fix
	* timidity/m2m.c (vol_nonlin_to_lin): Bug Fix
	* timidity/mod2midi.c: Move all linear/non-linear MOD volume
	  conversion stuff into m2m.c
	* timidity/playmidi.c (recompute_amp): Use linear volume curves
	  when playing MOD files
	* timidity/playmidi.c (new_chorus_voice_alternate): Use
	  IS_CURRENT_MOD_FILE to check for MOD file types instead of